--- a/zasoby/arkusz.css
+++ b/zasoby/arkusz.css
@@ -27,7 +27,7 @@ body {
 	font: 12px/16px "Helvetica Neue", "Arial", sans-serif;
 }
 
-body header a {
+body .łączeNagłówkowe {
 	text-decoration: none;
 }
 
@@ -36,13 +36,13 @@ h1 {
 	font: 46px sans;
 }
 
-h1 span {
+h1 .O {
 	color: #cc0f16;
 	font-weight: bold;
 	font-size: larger;
 }
 
-body header form {
+.szukajka {
 	float: right;
 }
 
@@ -65,6 +65,7 @@ article:first-child header {
 
 table {
 	border-collapse: collapse;
+	width: 100%;
 }
 
 td, th {
